--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dt-money",
   "version": "0.1.0",
+  "homepage": "https://enzobonf.github.io/dt-money",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -18,13 +19,16 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
