feat: adicionando MirageJS (2)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://enzobonf.github.io/dt-money",
   "private": true,
   "dependencies": {
+    "miragejs": "^0.1.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
