--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "homepage": "https://enzobonf.github.io/dt-money",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "miragejs": "^0.1.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
@@ -19,6 +21,7 @@
     "@types/node": "^16.11.54",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "typescript": "^4.7.4"
